# Place-recognition-evaluation

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: config.yaml  std_livox.yaml
include/: evaluator.h  merge_messages.h
include/methods/: STD.h  base.h  dbow.h  scan_context.h
include/methods/STD/: STDesc.h
include/methods/scan_context/: Scancontext.h
launch/: base.launch  config.yaml  evaluate_cpp.launch  evaluate_python.launch  merge.launch
launch/methods/: context.launch  dbow.launch  logg3d.launch  mix_vpr.launch  std.launch  superglue.launch
results/: .gitignore  get_results.py
scripts/: evaluate.py  evaluator.py  plot_pr_curve.py
scripts/methods/: LoGG3D.py  MixVPR_.py  SuperGlue.py  __init__.py  base.py
src/: dbow_create_vocab.cpp  evaluate.cpp  evaluator.cpp  merge_messages.cpp  msg_converter.cpp
src/methods/: STD.cpp  dbow.cpp  place_recognition_livox.cpp  scan_context.cpp
src/methods/STD/: STDesc.cpp
src/methods/scan_context/: Scancontext.cpp
