<?xml version="1.0"?>
<package format="2">
  <name>place_recog_eval</name>
  <version>0.0.1</version>
  <description>The place_recog_eval package</description>

  <maintainer email="ef.i.a@ya.ru">4ku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

</package>
